# clipper-alignment

./: CMakeLists.txt  README.md  package.xml
cmake/: clipper.cmake.in
include/aligner/: aligner.h  marker2pt2.h
launch/: aligner.launch  aligner_demo.launch  load_orcvio_bags.launch  load_orcvio_bags_sim.launch
src/: aligner.cpp  marker2pt2.cpp  node.cpp
